--- a/movie/templates/index.html
+++ b/movie/templates/index.html
@@ -1,31 +1,47 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
+   <head>
+      <meta charset="utf-8" />
+      <meta
+         name="viewport"
+         content="width=device-width, initial-scale=1, shrink-to-fit=no"
+      />
 
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+      <link
+         href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+         rel="stylesheet"
+         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+         crossorigin="anonymous"
+      />
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+      <script
+         src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+         crossorigin="anonymous"
+      ></script>
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-            crossorigin="anonymous"></script>
+      <title>스파르타 피디아</title>
 
-    <title>스파르타 피디아</title>
+      <link
+         href="https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap"
+         rel="stylesheet"
+      />
 
-    <link href="https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap" rel="stylesheet">
+      <style>
+         * {
+            font-family: "Gowun Dodum", sans-serif;
+         }
 
-    <style>
-        * {
-            font-family: 'Gowun Dodum', sans-serif;
-        }
-
-        .mytitle {
+         .mytitle {
             width: 100%;
             height: 250px;
 
-            background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('https://movie-phinf.pstatic.net/20210715_95/1626338192428gTnJl_JPEG/movie_image.jpg');
+            background-image: linear-gradient(
+                  0deg,
+                  rgba(0, 0, 0, 0.5),
+                  rgba(0, 0, 0, 0.5)
+               ),
+               url("https://movie-phinf.pstatic.net/20210715_95/1626338192428gTnJl_JPEG/movie_image.jpg");
             background-position: center;
             background-size: cover;
 
@@ -35,9 +51,9 @@
             flex-direction: column;
             align-items: center;
             justify-content: center;
-        }
+         }
 
-        .mytitle > button {
+         .mytitle > button {
             width: 200px;
             height: 50px;
 
@@ -48,23 +64,23 @@
             border: 1px solid white;
 
             margin-top: 10px;
-        }
+         }
 
-        .mytitle > button:hover {
+         .mytitle > button:hover {
             border: 2px solid white;
-        }
+         }
 
-        .mycomment {
+         .mycomment {
             color: gray;
-        }
+         }
 
-        .mycards {
+         .mycards {
             margin: 20px auto 0px auto;
             width: 95%;
             max-width: 1200px;
-        }
+         }
 
-        .mypost {
+         .mypost {
             width: 95%;
             max-width: 500px;
             margin: 20px auto 0px auto;
@@ -72,42 +88,42 @@
             box-shadow: 0px 0px 3px 0px gray;
 
             display: none;
-        }
+         }
 
-        .mybtns {
+         .mybtns {
             display: flex;
             flex-direction: row;
             align-items: center;
             justify-content: center;
 
             margin-top: 20px;
-        }
+         }
 
-        .mybtns > button {
+         .mybtns > button {
             margin-right: 10px;
-        }
-    </style>
-    <script>
-        $(document).ready(function () {
+         }
+      </style>
+      <script>
+         $(document).ready(function () {
             listing();
-        });
+         });
 
-        function listing() {
+         function listing() {
             $.ajax({
-                type: 'GET',
-                url: '/movie',
-                data: {},
-                success: function (response) {
-                    let rows = response['movies']
-                    for (let i = 0; i < rows.length; i++) {
-                        let comment = rows[i]['comment']
-                        let title = rows[i]['title']
-                        let image = rows[i]['image']
-                        let star = rows[i]['star']
-                        let desc = rows[i]['desc']
-                        let star_image = "⭐".repeat(star);
+               type: "GET",
+               url: "/movie",
+               data: {},
+               success: function (response) {
+                  let rows = response["movies"];
+                  for (let i = 0; i < rows.length; i++) {
+                     let comment = rows[i]["comment"];
+                     let title = rows[i]["title"];
+                     let image = rows[i]["image"];
+                     let star = rows[i]["star"];
+                     let desc = rows[i]["desc"];
+                     let star_image = "⭐".repeat(star);
 
-                        let temp_html = `<div class="col">
+                     let temp_html = `<div class="col">
             <div class="card h-100">
                 <img src="${image}"
                      class="card-img-top">
@@ -118,75 +134,92 @@
                     <p class="mycomment">${comment}</p>
                 </div>
             </div>
-        </div>`
-                        $('#cards-box').append(temp_html)
-                    }
+        </div>`;
+                     $("#cards-box").append(temp_html);
+                  }
 
-                    console.log(response['movies'])
-                }
-            })
-        }
+                  console.log(response["movies"]);
+               },
+            });
+         }
 
-        function posting() {
-            let url = $('#url').val();
-            let star = $('#star').val();
-            let comment = $('#comment').val();
+         function posting() {
+            let url = $("#url").val();
+            let star = $("#star").val();
+            let comment = $("#comment").val();
 
             $.ajax({
-                type: 'POST',
-                url: '/movie',
-                data: {url_give: url, star_give: star, comment_give: comment},
-                success: function (response) {
-                    alert(response['msg'])
-                    window.location.reload()
-                }
+               type: "POST",
+               url: "/movie",
+               data: { url_give: url, star_give: star, comment_give: comment },
+               success: function (response) {
+                  alert(response["msg"]);
+                  window.location.reload();
+               },
             });
-        }
+         }
 
-        function open_box() {
-            $('#post-box').show()
-        }
+         function open_box() {
+            $("#post-box").show();
+         }
 
-        function close_box() {
-            $('#post-box').hide()
-        }
-    </script>
-</head>
+         function close_box() {
+            $("#post-box").hide();
+         }
+      </script>
+   </head>
 
-<body>
-<div class="mytitle">
-    <h1>내 생애 최고의 영화들</h1>
-    <button onclick="open_box()">영화 기록하기</button>
-</div>
-<div class="mypost" id="post-box">
-    <div class="form-floating mb-3">
-        <input id="url" type="email" class="form-control" placeholder="name@example.com">
-        <label>영화URL</label>
-    </div>
-    <div class="input-group mb-3">
-        <label class="input-group-text" for="inputGroupSelect01">별점</label>
-        <select class="form-select" id="star">
-            <option selected>-- 선택하기 --</option>
-            <option value="1">⭐</option>
-            <option value="2">⭐⭐</option>
-            <option value="3">⭐⭐⭐</option>
-            <option value="4">⭐⭐⭐⭐</option>
-            <option value="5">⭐⭐⭐⭐⭐</option>
-        </select>
-    </div>
-    <div class="form-floating">
-        <textarea id="comment" class="form-control" placeholder="Leave a comment here"></textarea>
-        <label for="floatingTextarea2">코멘트</label>
-    </div>
-    <div class="mybtns">
-        <button onclick="posting()" type="button" class="btn btn-dark">기록하기</button>
-        <button onclick="close_box()" type="button" class="btn btn-outline-dark">닫기</button>
-    </div>
-</div>
-<div class="mycards">
-    <div class="row row-cols-1 row-cols-md-4 g-4" id="cards-box">
-    </div>
-</div>
-</body>
-
+   <body>
+      <div class="mytitle">
+         <h1>내 생애 최고의 영화들</h1>
+         <button onclick="open_box()">영화 기록하기</button>
+      </div>
+      <div class="mypost" id="post-box">
+         <div class="form-floating mb-3">
+            <input
+               id="url"
+               type="email"
+               class="form-control"
+               placeholder="name@example.com"
+            />
+            <label>영화URL</label>
+         </div>
+         <div class="input-group mb-3">
+            <label class="input-group-text" for="inputGroupSelect01"
+               >별점</label
+            >
+            <select class="form-select" id="star">
+               <option selected>-- 선택하기 --</option>
+               <option value="1">⭐</option>
+               <option value="2">⭐⭐</option>
+               <option value="3">⭐⭐⭐</option>
+               <option value="4">⭐⭐⭐⭐</option>
+               <option value="5">⭐⭐⭐⭐⭐</option>
+            </select>
+         </div>
+         <div class="form-floating">
+            <textarea
+               id="comment"
+               class="form-control"
+               placeholder="Leave a comment here"
+            ></textarea>
+            <label for="floatingTextarea2">코멘트</label>
+         </div>
+         <div class="mybtns">
+            <button onclick="posting()" type="button" class="btn btn-dark">
+               기록하기
+            </button>
+            <button
+               onclick="close_box()"
+               type="button"
+               class="btn btn-outline-dark"
+            >
+               닫기
+            </button>
+         </div>
+      </div>
+      <div class="mycards">
+         <div class="row row-cols-1 row-cols-md-4 g-4" id="cards-box"></div>
+      </div>
+   </body>
 </html>
