취소 기능 추가

--- a/bucket/templates/index.html
+++ b/bucket/templates/index.html
@@ -124,6 +124,7 @@
                      } else {
                         temp_html = `<li>
                                             <h2 class="done">✅ ${bucket}</h2>
+                                            <button onclick="cancel_bucket(${num})" type="button" class="btn btn-outline-primary">취소!</button>
                                             <button onclick="delete_bucket(${num})" type="button" class="btn btn-outline-primary">삭제!</button>
                                         </li>`;
                         $("#bucket-list").append(temp_html);
@@ -163,6 +164,18 @@
             $.ajax({
                type: "POST",
                url: "/bucket/delete",
+               data: { num_give: num },
+               success: function (response) {
+                  alert(response["msg"]);
+                  window.location.reload();
+               },
+            });
+         }
+
+         function cancel_bucket(num) {
+            $.ajax({
+               type: "POST",
+               url: "/bucket/cancel",
                data: { num_give: num },
                success: function (response) {
                   alert(response["msg"]);
